[package]
name = "smartlockcursor"
version = "0.1.0"
edition = "2021"
description = "A Windows utility that locks the mouse cursor to the display containing a fullscreen window"
authors = ["Armagan"]

[dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_Security",
] }
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
